feat: integrate Cloudinary for image uploads and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_NAME=astatica
 SESSION_SECRET=your-super-secret-session-key-change-in-production
 ADMIN_USER=admin
 ADMIN_PASS_HASH=$2b$10$your-bcrypt-hash-here
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
